# libfixmath-src-rs

./: Cargo.toml  README.md  build.rs
src/: lib.rs  wrapper.h
